# communication_translator

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
.specify/memory/: constitution.md
doc/: examples.md
openspec/changes/archive/2025-12-14-add-intent-router/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-14-refine-ui-aesthetics/: proposal.md  tasks.md
openspec/changes/archive/2025-12-14-restructure-to-layered-arch/: proposal.md  tasks.md
openspec/specs/intent-routing/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/ui-styling/: spec.md
specs/001-communication-translator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-communication-translator/checklists/: requirements.md
specs/001-communication-translator/contracts/: api.yaml
src/: __init__.py  app.py  config.py  main.py  models.py  prompts.py  router.py  translator.py
src/clients/: __init__.py  deepseek.py
src/controllers/: __init__.py  health.py  translate.py
src/models/: __init__.py  enums.py  requests.py  responses.py
src/prompts/: __init__.py
src/services/: __init__.py  intent_router.py  translator.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_router.py  test_translator.py
tests/controllers/: __init__.py  test_health.py  test_translate.py
tests/models/: __init__.py  test_requests.py
tests/services/: __init__.py  test_intent_router.py  test_translator.py
(+3 files in other folders)
